[#8] Fix page title bleed through the menu animation

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,17 @@
  * that need to be made for WDN styles to work with CMS DOM structure.
  */
 
+
+
+/* The normal relative positioning of .contextual-region causes the page title to 
+   bleed through the red bar menu throughout the menu animation. */
+#dcf-page-title .contextual-region {
+    position: static;
+}
+#dcf-page-title .contextual-region:hover {
+    position: relative;
+}
+
 /* The exclude_node_title module empties the h1 text but leaves the empty element
    See: https://www.drupal.org/node/2624734 */
 #pagetitle h1:empty {
